Create basic app layout

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <title>ECE4094</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
         <script src="/index.js" type="module"></script>
     </body>
 </html>
