Experiment with pan and zoom in the editor

--- a/apps/editor/index.html
+++ b/apps/editor/index.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="initial-scale=1,width=device-width" />
 
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="/src/index.css" />
 
-		<title>Document</title>
+		<title>ECE4094</title>
 	</head>
 
 	<body>
 		<div id="root"></div>
 
-		<script src="index.tsx" type="module"></script>
+		<script src="/src/index.tsx" type="module"></script>
 	</body>
 </html>
