Major changes to core editor infrastructure

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="initial-scale=1,width=device-width" />
 
+		<link rel="stylesheet" href="ibm-plex-sans/css/ibm-plex.css" />
+
+		<link rel="stylesheet" href="/src/themes/dark.css" media="(prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="/src/themes/light.css" media="(prefers-color-scheme: light)" />
+
 		<link rel="stylesheet" href="/src/index.css" />
 
 		<title>ECE4094</title>
